@@ -147,6 +147,8 @@ public class ReferenceCollection {
 	
 	public static String config_url_valid_title;
 	public static String config_url_valid_text;
+	public static String config_vacation_valid_title;
+	public static String config_vacation_valid_text;
 	
 	public static FeedTable FEED_TABLE;
 }
