@@ -1,0 +1,45 @@
+/**
+    RSSTray - simply alerting at new Feed Information
+    Copyright (C) 2009 Thomas Pummer
+    conatct me fake (at) sprossenwanne.at
+
+    This program is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+ */
+package at.nullpointer.trayrss.gui.configframe;
+
+import java.util.Date;
+
+import javax.swing.JOptionPane;
+
+import at.nullpointer.trayrss.configuration.ReferenceCollection;
+
+public class DateValidator {
+
+	public static boolean checkDates(Date start, Date end) {
+		if (start == null)
+			return true;
+		if (end == null)
+			return true;
+		if (end.after(start))
+			return true;
+
+		JOptionPane.showMessageDialog(null,
+				ReferenceCollection.config_vacation_valid_text,
+				ReferenceCollection.config_vacation_valid_title,
+				JOptionPane.ERROR_MESSAGE);
+		return false;
+	}
+
+}
