@@ -1,0 +1,31 @@
+/**
+    RSSTray - simply alerting at new Feed Information
+    Copyright (C) 2009 Thomas Pummer
+    conatct me fake (at) sprossenwanne.at
+
+    This program is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+ */
+package at.nullpointer.trayrss.test.gui;
+
+import org.junit.runner.RunWith;
+import org.junit.runners.Suite;
+
+import at.nullpointer.trayrss.test.gui.configframe.ConfigFrameTests;
+
+@RunWith(Suite.class)
+@Suite.SuiteClasses( { ConfigFrameTests.class })
+public class GuiTests {
+
+}
